--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,63 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap');
 
+@font-face {
+    font-family: 'icomoon';
+    src:  url('../fonts/icomoon.eot?4fdx91');
+    src:  url('../fonts/icomoon.eot?4fdx91#iefix') format('embedded-opentype'),
+      url('../fonts/icomoon.ttf?4fdx91') format('truetype'),
+      url('../fonts/icomoon.woff?4fdx91') format('woff'),
+      url('../fonts/icomoon.svg?4fdx91#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+  }
+  
+  [class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+  
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  .icon-trending:before {
+    content: "\e906";
+  }
+  .icon-home:before {
+    content: "\e907";
+  }
+  .icon-settings:before {
+    content: "\e908";
+  }
+  .icon-likes:before {
+    content: "\e909";
+  }
+  .icon-youtube:before {
+    content: "\e901";
+  }
+  .icon-facebook:before {
+    content: "\e902";
+  }
+  .icon-github:before {
+    content: "\e903";
+  }
+  .icon-instagram:before {
+    content: "\e904";
+  }
+  .icon-twitter:before {
+    content: "\e905";
+  }
+  .icon-menu:before {
+    content: "\e900";
+  }
+  
 
 body{
     margin: 0;
@@ -10,8 +68,8 @@ body{
 .project-container {
     max-width: 100%;
     display: grid;
-    grid-template-columns:  80px 1fr;
-    grid-template-rows: 70px 1fr 1fr 1fr ;
+    grid-template-columns:  auto 1fr;
+    grid-template-rows: auto 1fr 1fr 1fr ;
     grid-template-areas: "header header"
                          "navbar series"
                          "navbar series"
@@ -32,6 +90,7 @@ body{
  }
  .logo img{
      width: 100%;
+     margin-top:10px ;
  }
 
  .logo-container {
@@ -96,11 +155,49 @@ body{
 
 .navbar {
     background: rgb(83, 200, 230);
-    width: 80px;
-    /* height: 100vh; */
+    width: 100px;
+    height: 100%;
     grid-area: navbar;
 }
 
+.navbar-container {
+  width: 100%;
+  display: inline-block;
+  text-align: center;
+  
+  
+}
+.navbar-item h3 {
+  color: white;
+}
+.icon-home{
+  font-size: 40px;
+  color: white;
+
+}
+
+.icon-trending{
+  font-size: 40px;
+  color: white;
+}
+
+.icon-likes{
+  font-size: 40px;
+  color: white;
+}
+
+.icon-settings{
+  font-size: 40px;
+  color: white;
+}
+
+.icons-container {
+  margin-top: 30px;
+}
+
+.settings{
+  margin-top: 350px;
+}
 .series {
     /* background: red; */
     grid-area: series;
