--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,7 @@ body{
 
 
 .project-container {
+  margin: 0;
     max-width: 100%;
     display: grid;
     grid-template-columns:  auto 1fr;
@@ -82,6 +83,7 @@ body{
     grid-area: header;
     display: flex;
     justify-content: space-between;
+    box-shadow: 0px 3px 16px 0px rgba(130,128,130,1);
 
 }
  .logo {
@@ -158,6 +160,8 @@ body{
     width: 100px;
     height: 100%;
     grid-area: navbar;
+    
+    
 }
 
 .navbar-container {
@@ -202,5 +206,40 @@ body{
     /* background: red; */
     grid-area: series;
     /* max-width: 100%; */
-    height: 100vh;
+    height: 100%;
+    display: grid;
 }
+
+.series-container{
+  display: grid;
+  align-items: center;
+  margin: 0;
+  /* justify-content: space-around; */
+}
+.series-container h2 {
+  margin: 0 30px;
+}
+.items-box {
+  max-width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  margin: 0 30px;
+  justify-items: space-evenly;
+
+}
+
+.thumbnails{
+  border: 1px solid red;
+  max-width: 300px;
+  height: 150px;
+  box-shadow: 0px 3px 16px 0px rgba(130,128,130,1);
+}
+
+.robot {
+  max-width: 100%;
+  height: auto;
+}
+
+
